--- a/index.html
+++ b/index.html
@@ -28,4 +28,16 @@
   </div>
 
 </body>
+  
+  <style media="screen">
+  #container{
+    text-align: center;
+  }
+
+  h1{
+    font-weight: bold;
+    font-size: 100px;
+  }
+</style>
+  
 </html>
