--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
   <div id="container">
 
-    <div id="404">
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+
+    <div id="not_found">
 
       <h1>
         404
@@ -28,5 +33,5 @@
   </div>
 
 </body>
-  
+
 </html>
