3de en 4de ball added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </h1>
 
       <h2>
-        this page was not found
+        page not found
       </h2>
 
       <a href="https://github.com/YerkoDeZutter">Back</a>
