--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
-  <title>Document</title>
+  <title>404</title>
 </head>
 <body>
 
